# Mutate_ENHANCED_EDITION

./: .gitignore  README.md  pyproject.toml
Mutate_ENHANCED_EDITION/: config.py  main.py  main_pygame.py  sim_log.txt
Mutate_ENHANCED_EDITION/core/: simulation.py  world.py
Mutate_ENHANCED_EDITION/creatures/: damage.py  genome.py  immune_system.py
Mutate_ENHANCED_EDITION/creatures/brain/: subsystem_brain.py
Mutate_ENHANCED_EDITION/debug/: console.py
Mutate_ENHANCED_EDITION/plants/: plant_types.py
Mutate_ENHANCED_EDITION/ui/: render.py
Mutate_ENHANCED_EDITION/utils/: grid.py
examples/: config_custom.yaml
src/mutate/: __init__.py  main.py  main_pygame.py
src/mutate/core/: disease.py  environment.py  logging_system.py  terrain.py
src/mutate/creatures/: creature.py  digestion.py  senses.py  species_template.py
src/mutate/creatures/brain/: master_brain.py  memory.py  nn_core.py
src/mutate/debug/: creature_inspector.py  species_inspector.py  world_inspector.py
src/mutate/plants/: plant_instance.py
src/mutate/species/: basic_plant_eater.py
src/mutate/utils/: timing.py
